--- a/portfolio-details-29.html
+++ b/portfolio-details-29.html
@@ -90,7 +90,7 @@
 								<ul class="list">
 									<li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></li>
 									<li><span>Client</span>: Aqarat Raqamia</li>
-									<li><span>Website</span>:  test.com</li>
+									<li><span>Website</span>:  <a href="https://ksaprop.net/">ksaprop.net</a></li>
 									<li><span>Completed</span>:  18-12-2021</li>
 								</ul>
 								<h5>Skills</h5>
