--- a/portfolio-details-30.html
+++ b/portfolio-details-30.html
@@ -95,7 +95,7 @@
 								<ul class="list">
 									<li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></li>
 									<li><span>Client</span>: شركة زفة زواجك</li>
-									<li><span>Website</span>:  test.com</li>
+									<li><span>Website</span>:  <a href="https://zawajk.net/">zawajk.net</a></li>
 									<li><span>Completed</span>:  18-12-2021</li>
 								</ul>
 								<h5>Skills</h5>
