--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,18 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 webApp">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/34-Deep_Micro_Systems-WebApp.png" alt="">
+        						<a class="light" href="img/gallery/34-Deep_Micro_Systems-WebApp.png"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+        						<a href="portfolio-details-34.html" target="_blank"><h4>Deep Micro Systems</h4></a>
+        						<p>Web Application</p>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 webApp">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
         						<img class="img-fluid" src="img/gallery/33-Quick_Bill-WebApp.png" alt="">
         						<a class="light" href="img/gallery/33-Quick_Bill-WebApp.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
